- new spells to be tested: MageFrostFrostChanneling
- added new file for Mage frost fixes