@@ -303,6 +303,7 @@
     <Compile Include="Spells\Hunter\HunterSurvivalFixes.cs" />
     <Compile Include="Spells\Mage\MageArcaneFixes.cs" />
     <Compile Include="Spells\Mage\MageFireFixes.cs" />
+    <Compile Include="Spells\Mage\MageFrostFixes.cs" />
     <Compile Include="Spells\Paladin\PaladinHolyFixes.cs" />
     <Compile Include="Spells\Paladin\PaladinProtectionFixes.cs" />
     <Compile Include="Spells\Paladin\PaladinRetributionFixes.cs" />
